/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
 */
plugins {
  id 'java'
  id 'application'
  id 'com.github.johnrengelman.shadow' version '2.0.4'
}
ext {
  vertxVersion = '3.5.4'
  junitJupiterEngineVersion = '5.2.0'
}

repositories {
  mavenLocal()
  jcenter()
}

group = 'io'
version = '1.0.0-SNAPSHOT'

sourceCompatibility = '1.8'
mainClassName = 'io.vertx.core.Launcher'

def mainVerticleName = 'io.vertx.kstream.MainVerticle'
def watchForChange = 'src/**/*'
def doOnChange = './gradlew classes'

dependencies {

  implementation "io.vertx:vertx-core:$vertxVersion"

  //Web
  implementation "io.vertx:vertx-web:$vertxVersion"
  implementation "io.vertx:vertx-web-templ-thymeleaf:3.5.4"

  // Kafka
  implementation "io.vertx:vertx-kafka-client:$vertxVersion"
  implementation "org.apache.kafka:kafka-streams:2.0.0"
//  implementation "org.apache.kafka:kafka-clients:2.0.0"

  testImplementation "io.vertx:vertx-junit5:$vertxVersion"
  testRuntime("org.junit.jupiter:junit-jupiter-engine:$junitJupiterEngineVersion")
}


shadowJar {
  classifier = 'fat'
  manifest {
    attributes 'Main-Verticle': mainVerticleName
  }
  mergeServiceFiles {
    include 'META-INF/services/io.vertx.core.spi.VerticleFactory'
  }
}

test {
  useJUnitPlatform()
  testLogging {
    events 'PASSED', 'FAILED', 'SKIPPED'
  }
}

run {
  args = ['run', mainVerticleName,
          "--redeploy=$watchForChange",
          "--launcher-class=$mainClassName",
          "--on-redeploy=$doOnChange",
           "--illegal-access=warn"
  ]
}

task wrapper(type: Wrapper) {
  gradleVersion = '4.6'
}
